typescript/checker/tests/conformance/expressions/propertyAccess/propertyAccessStringIndexSignatureNoImplicitAny.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            72,
        ),
        hi: BytePos(
            77,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/propertyAccess/propertyAccessStringIndexSignatureNoImplicitAny.ts:3:5
  |
3 | let flags: Flags;
  |     ^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            186,
        ),
        hi: BytePos(
            191,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/propertyAccess/propertyAccessStringIndexSignatureNoImplicitAny.ts:10:5
   |
10 | let empty: Empty;
   |     ^^^^^

